[project]
name = "python-youtube"
version = "0.9.9"
description = "A Python wrapper around for YouTube Data API."
authors = [{ name = "ikaroskun", email = "merle.liukun@gmail.com" }]
requires-python = ">=3.9"
readme = "README.rst"
license = "MIT"
keywords = ["youtube-api", "youtube-v3-api", "youtube-data-api", "youtube-sdk"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "requests>=2.24.0,<3",
    "requests-oauthlib===1.3.0,<3.0.0",
    "isodate>=0.6.0,<=0.7.2",
    "pydantic>=2.11.2",
]

[project.urls]
Homepage = "https://github.com/sns-sdks/python-youtube"
Repository = "https://github.com/sns-sdks/python-youtube"

[dependency-groups]
dev = ["responses>=0.23.0,<0.24", "pytest~=7.1", "pytest-cov>=3.0.0,<4"]

[tool.hatch.build.targets.sdist]
include = ["pyyoutube", "tests"]

[tool.hatch.build.targets.wheel]
include = ["pyyoutube"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
